--- a/Personalwebsite.css
+++ b/Personalwebsite.css
@@ -1,81 +1,119 @@
-.profile {
-    font-size: 70px;
-    font-family: 'Courier New', Courier, monospace ;
-    color: rgb(68, 240, 68);
-    margin-left: 550px;
-    margin-top: 0px;
-   
-}
-
-.Blinkingcursor {
-    font-size: 70px;
-    font-weight: 500;
-    font-family: 'Courier New', Courier, monospace;
-    animation-name: blink;
-    animation-duration: 1s;
-    animation-iteration-count: 60;
-}
-
-@keyframes blink{
-    from {color: Green;}
-    to {color: transparent;}
-}
-
-.bounce { 
-    animation-name: bounce; 
-} 
-
-.bouncing-letters {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin-top: 700px;
-    margin-left: 550px; 
-    margin-bottom: 0px;
-    font-size: 350px;
-    color: rgb(206, 227, 245);
-    text-shadow: 14px 14px 14px #000000;
-
-}
-
-.bouncing-letters span { 
-    animation-timing-function: linear; 
-    animation-duration: 1s; 
-    animation-iteration-count: 1; 
-    display: inline-block; 
-} 
-
-.bouncing-letters span:hover { 
-    color: rgb(132, 132, 132); 
-} 
-
-@keyframes bounce { 
-
-    20%, 
-    50%, 
-    80%, 
-    to { 
-        transform: scale(1, 1); 
-    } 
-
-    40% { 
-        transform: scale(1.75, 0.65); 
-    } 
-
-    45% { 
-        transform: scale(1.75, 0.65); 
-    } 
-
-    70% { 
-        transform: scale(1.25, 0.75); 
-    } 
-
-    90% { 
-        transform: scale(1.15, 0.85); 
-    } 
-} 
-
-
-
 body {
-    background-color: rgb(40, 40, 40);
-    
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: auto;
+    padding: 0;
+    background-color: #ffffff;
+    min-height: 5500px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  margin: auto;
+  background-color: transparent;
+  width: 500px;
+  height: 400px;
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: #363636;
+  color: #d2d2d2;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 7px;
+  transform: rotateY(180deg);
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 500px;
+}
+
+marquee {
+    margin-top: 70px;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 200px;
+}
+
+h1 {
+    margin-top: 120px;
+}
+
+.arrow {
+  position: absolute;
+  bottom: +2rem;
+  left: 50%;
+  margin-left:-20px;
+  width: 40px;
+  height: 40px;
+
+  /**
+   * Dark Arrow Down
+   */
+  background-image: url(https://static.thenounproject.com/png/2171431-200.png);
+  background-size: contain;
+}
+
+.bounce {
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.page_2 {
+  margin-top: 360px;
+}
+
+h {
+  font-size: 150px;
+  color: antiquewhite;
+}
+
+.hidden {
+  display: none;
 }
