--- a/Personalwebsite.css
+++ b/Personalwebsite.css
@@ -1,10 +1,10 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    line-height: 1.6;
-    margin: auto;
     padding: 0;
     background-color: white;
     min-height: 500rem;
+    max-width: 100%;
+    overflow-x: hidden;
     }
 
 html {
@@ -14,7 +14,8 @@ html {
 .flip-card {
   margin: auto;
   background-color: transparent;
-  width: 50rem;
+  width: auto;
+  max-width: 100%;
   height: 20rem;
 }
 
@@ -27,6 +28,8 @@ html {
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
+
+
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
@@ -68,11 +71,12 @@ marquee {
     margin-top: 4rem;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 13rem;
+    font-size: 12rem;
     font-weight: 800;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
     color: white;
+    max-width: 100%;
 }
 
 h1 {
@@ -85,7 +89,6 @@ h1 {
   position: absolute;
   bottom: +2rem;
   left: 50%;
-  margin-left:-20px;
   width: 4rem;
   height: 4rem;
 
