--- a/Personalwebsite.css
+++ b/Personalwebsite.css
@@ -30,7 +30,6 @@ html {
 }
 
 
-
 /* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
@@ -67,16 +66,56 @@ html {
     width: 50rem;
 }
 
-marquee {
-    margin-top: 4rem;
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 12rem;
-    font-weight: 800;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: black;
-    color: white;
-    max-width: 100%;
+@keyframes scrollMarqueeleft {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(-100%); }
+}
+
+.custom-marquee {
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12rem;
+  font-weight: 800;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
+  color: white;
+  max-width: 100%;
+  white-space: nowrap;
+  position: relative;
+  height: 15rem; /* Adjust based on your content */
+  margin-bottom: 5rem; /* Added spacing at the bottom */
+}
+
+.custom-marquee div {
+  position: absolute;
+  will-change: transform;
+  animation: scrollMarqueeleft 5s linear infinite;
+}
+
+@keyframes scrollMarqueeright {
+  0% { transform: translateX(-100%); }
+  100% { transform: translateX(100%); }
+}
+
+.custom-marquee1 {
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12rem;
+  font-weight: 800;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
+  color: white;
+  max-width: 100%;
+  white-space: nowrap;
+  position: relative;
+  height: 15rem; /* Adjust based on your content */
+  margin-bottom: 5rem; /* Added spacing at the bottom */
+}
+
+.custom-marquee1 div {
+  position: absolute;
+  will-change: transform;
+  animation: scrollMarqueeright 5s linear infinite;
 }
 
 h1 {
