--- a/Personalwebsite.css
+++ b/Personalwebsite.css
@@ -1,11 +1,12 @@
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 0;
-    background-color: white;
-    min-height: 500rem;
-    max-width: 100%;
-    overflow-x: hidden;
-    }
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 0;
+  background-color: white;
+  min-height: 500rem;
+  max-width: 100%;
+  overflow-x: hidden;
+  font-size: calc(12px + 0.5vw); /* Adjust base font size based on viewport width */
+}
 
 html {
   scroll-behavior: smooth;
@@ -14,16 +15,15 @@ html {
 .flip-card {
   margin: auto;
   background-color: transparent;
-  width: auto;
   max-width: 100%;
-  height: 18rem;
+  height: 20rem;
 }
 
 /* This container is needed to position the front and back side */
 .flip-card-inner {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: auto;
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
@@ -39,7 +39,7 @@ html {
 .flip-card-front, .flip-card-back {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: auto;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
 }
@@ -66,15 +66,11 @@ html {
     width: 50rem;
 }
 
-@keyframes scrollMarqueeleft {
-  0% { transform: translateX(400%); } /* Start from the right side of the screen */
-  100% { transform: translateX(-400%); } /* End to the left side of the screen */
-}
 
-.custom-marquee {
+
+.custom-marquee, .custom-marquee1 {
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 12rem;
+  font-family: inherit;
   font-weight: 800;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: black;
@@ -82,57 +78,22 @@ html {
   max-width: 100%;
   white-space: nowrap;
   position: relative;
-  height: 14rem; /* Adjust based on your content */
-  margin-bottom: 0 rem; /* Spacing at the bottom */
-  overflow: hidden; /* Hide overflow to ensure smooth animation start/end */
-}
-
-.custom-marquee div {
-  position: absolute;
-  right: 100%; /* Start from outside of the right side of the screen */
-  will-change: transform;
-  animation: scrollMarqueeleft 10s linear infinite;
-}
-
-
-@keyframes scrollMarqueeright {
-  0% { transform: translateX(-300%); }
-  100% { transform: translateX(300%); }
-}
-
-.custom-marquee1 {
-  text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 12rem;
-  font-weight: 800;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: black;
-  color: white;
-  max-width: 100%;
-  white-space: nowrap;
-  position: relative;
-  height: 14rem; /* Adjust based on your content */
-  margin-bottom: 5rem; /* Added spacing at the bottom */
-}
-
-.custom-marquee1 div {
-  position: absolute;
-  will-change: transform;
-  animation: scrollMarqueeright 11s linear infinite;
+  height: 15rem; /* Adjust based on your content */
+  font-size: calc(10rem + 2vw); /* Fluid font size */
+  margin-bottom: 5rem; /* Added spacing at the bottom for .custom-marquee1 */
 }
 
 h1 {
-    font-size: 10rem;
-    margin-top: 1rem;
+  font-size: calc(8rem + 1vw); /* Fluid font size */
+  margin-top: 1rem;
 }
-
 
 .arrow {
   position: absolute;
   bottom: +2rem;
   left: 50%;
-  width: 3rem;
-  height: 3rem;
+  width: 3em;
+  height: 3em;
 
   /**
    * Dark Arrow Down
@@ -163,10 +124,11 @@ h1 {
 
 .content_3 {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 150px;
+  font-size: calc(130px + 1vw); /* Fluid font size */
   color: salmon;
   -webkit-text-stroke-width: 7px;
   -webkit-text-stroke-color: rgb(255, 255, 255);
+  /* ... other styles ... */
 }
 
 h {
@@ -174,8 +136,8 @@ h {
   -webkit-text-stroke-color: rgb(255, 255, 255);
   margin-left: 7rem;
   max-width: 80%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 9rem;
+  font-family: inherit;
+  font-size: calc(7rem + 1vw); /* Fluid font size */
   font-weight: 600;
   color: rgb(0, 0, 0);
 }
@@ -308,15 +270,15 @@ h {
 h2 {
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: black;
-  color:bisque;
+  color: bisque;
   margin-left: 20px;
-  font-size: 40px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: calc(35px + 0.5vw); /* Fluid font size */
+  font-family: inherit;
 }
 
 p {
   margin-left: 20px;
-  font-size: 20px;
+  font-size: calc(18px + 0.3vw); /* Fluid font size */
   font-weight: 500;
   font-family: 'Courier New', Courier, monospace;
 }
@@ -349,6 +311,14 @@ p1 {
       0 0 30px #00cd5c;
   }
 }
+
+@media screen and (max-width: 600px) {
+  body {
+      font-size: calc(11px + 0.5vw);
+  }
+  /* ... additional responsive font size adjustments for smaller screens ... */
+}
+
 
 .glowing-text {
   font-size: 20px;
